force-app/main/default/objects/LLC_BI__Covenant_Product__c/fields/LLC_BI__Covenant2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant2__c</fullName>
    <description>Covenant Product Master-Detail Relationship to Covenant</description>
    <inlineHelpText>Covenant Product Master-Detail Relationship to Covenant</inlineHelpText>
    <label>Covenant2</label>
    <referenceTo>LLC_BI__Covenant2__c</referenceTo>
    <relationshipLabel>Covenant Products</relationshipLabel>
    <relationshipName>Covenant_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>