force-app/main/default/objects/LLC_BI__Covenant_Product__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>Available Products</description>
    <inlineHelpText>Available Products</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>