force-app/main/default/objects/LLC_BI__Covenant_Product__c/fields/LLC_BI__Product_Line__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Line__c</fullName>
    <description>Available Product Lines</description>
    <inlineHelpText>Available Product Lines</inlineHelpText>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
                <default>true</default>
                <label>Start</label>
            </value>
            <value>
                <fullName>SBA Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>