force-app/main/default/objects/LLC_BI__Covenant_Product__c/fields/LLC_BI__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type__c</fullName>
    <description>Available Product Types</description>
    <inlineHelpText>Available Product Types</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>7(a)</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>